Fixed some CSS styling in the board page. nth-child was not working for DragDropApp due to the droparea div being wrapped in another div

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,6 +9,7 @@ form {
 .drop-area {
   height: auto;
   min-height: 600px;
+  text-align: center;
 }
 
 .drop-area:nth-child(odd) {
@@ -16,8 +17,9 @@ form {
 }
 
 .drop-area:nth-child(even) {
-  background-color: #bde6f7; /* Light gray */
+  background-color: #bde6f7;
 }
+
 
 
 .task-div {
